# src/storage/api-docs/api-docs.json
@@ -13,13 +13,37 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/api/v1/cart/add": {
+        "/api/v1/cart": {
+            "get": {
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Retrieves the cart",
+                "operationId": "8c5d7989eafc94f3507df8cc53602edf",
+                "parameters": [
+                    {
+                        "name": "x-agent-id",
+                        "in": "header",
+                        "description": "Unique agent ID for tracking guest users",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "agent-12345"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Cart details retrieved successfully."
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "Cart"
                 ],
                 "summary": "Adds a product to the cart",
-                "operationId": "64ded07a7d94bb1e041a193be0820098",
+                "operationId": "7fa26cfe5f405c7973c68ed6c4954f18",
                 "parameters": [
                     {
                         "name": "x-agent-id",
@@ -65,14 +89,24 @@
                 }
             }
         },
-        "/api/v1/cart/remove/{productId}": {
+        "/api/v1/cart/{productId}": {
             "delete": {
                 "tags": [
                     "Cart"
                 ],
                 "summary": "Removes a product from the cart",
-                "operationId": "f7c297a444b600005a79a0a6ef4f33a7",
+                "operationId": "a529761ba94794e41a5f58913563d971",
                 "parameters": [
+                    {
+                        "name": "x-agent-id",
+                        "in": "header",
+                        "description": "Unique agent ID for tracking guest users",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "agent-12345"
+                        }
+                    },
                     {
                         "name": "productId",
                         "in": "path",
@@ -90,14 +124,24 @@
                 }
             }
         },
-        "/api/v1/cart/update/{productId}/{quantity}": {
+        "/api/v1/cart/{productId}/{quantity}": {
             "put": {
                 "tags": [
                     "Cart"
                 ],
                 "summary": "Updates the quantity of a product in the cart",
-                "operationId": "fcdbbcf6a13df0a05060ac85df892075",
+                "operationId": "4076c6d6847eccb3ab7e6a20fbf9225b",
                 "parameters": [
+                    {
+                        "name": "x-agent-id",
+                        "in": "header",
+                        "description": "Unique agent ID for tracking guest users",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "agent-12345"
+                        }
+                    },
                     {
                         "name": "productId",
                         "in": "path",
@@ -131,23 +175,21 @@
                 ],
                 "summary": "Clears the cart",
                 "operationId": "c1a5db0cec9ed73e5a20408620f384f9",
+                "parameters": [
+                    {
+                        "name": "x-agent-id",
+                        "in": "header",
+                        "description": "Unique agent ID for tracking guest users",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "agent-12345"
+                        }
+                    }
+                ],
                 "responses": {
                     "204": {
                         "description": "Cart successfully cleared."
-                    }
-                }
-            }
-        },
-        "/api/v1/cart": {
-            "get": {
-                "tags": [
-                    "Cart"
-                ],
-                "summary": "Retrieves the cart",
-                "operationId": "78e1bd74040b55fd52e5f7d64b73150f",
-                "responses": {
-                    "200": {
-                        "description": "Cart details retrieved successfully."
                     }
                 }
             }
